Update cron schedule for Reddit scraper
Changed cron schedule to run every 5 minutes.

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,7 +2,7 @@ name: Reddit Scraper
 
 on:
   schedule:
-    - cron: "0 * * * *"    # Run every 6 hours
+    - cron: "*/5 * * * *"
   workflow_dispatch:       # Manual trigger button
 
 jobs:
