--- a/.github/workflows/filter.yml
+++ b/.github/workflows/filter.yml
@@ -2,7 +2,7 @@ name: Daily Filter
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # Runs once daily at 00:00 UTC
+    - cron: "30 3 * * *"   # Runs daily at 9:00 AM IST
   workflow_dispatch:        # Allow manual trigger
 
 jobs:
