--- a/.github/workflows/filter.yml
+++ b/.github/workflows/filter.yml
@@ -3,14 +3,15 @@ name: Daily Filter
 on:
   schedule:
     - cron: "30 3 * * *"   # Runs daily at 9:00 AM IST
-  workflow_dispatch:        # Allow manual trigger
+  workflow_dispatch:
 
 jobs:
   filter:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write      # Required to commit changes
+      contents: write
+      actions: write   # <-- minimal addition
 
     steps:
     - name: Checkout repository
@@ -41,3 +42,15 @@ jobs:
           git commit -m "Daily filtered posts update - $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
           git push
         fi
+
+    # <-- minimal added step only
+    - name: Trigger scraper workflow
+      uses: actions/github-script@v7
+      with:
+        script: |
+          await github.rest.actions.createWorkflowDispatch({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            workflow_id: 'scraper.yml',
+            ref: 'main'
+          })
