--- a/.github/workflows/price_scraper.yml
+++ b/.github/workflows/price_scraper.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 6 * * *'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   scrape:
     runs-on: ubuntu-latest
@@ -39,7 +42,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_price.txt
+          pip install -r requirements.txt
 
       - name: Install Playwright browsers
         run: playwright install chromium
