--- a/.github/workflows/price_scraper.yml
+++ b/.github/workflows/price_scraper.yml
@@ -45,7 +45,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Install Playwright browsers
-        run: playwright install chromium
+        run: python -m playwright install chromium
 
       - name: Run scraper
         run: python UnifiedPriceScraper.py
