--- a/.github/workflows/price_scraper.yml
+++ b/.github/workflows/price_scraper.yml
@@ -49,7 +49,16 @@ jobs:
 
       - name: Run scraper
         env:
-          SCRAPER_API_KEY: ${{ secrets.SCRAPER_API_KEY }}
+          SCRAPER_API_KEY_1: ${{ secrets.SCRAPER_API_KEY_1 }}
+          SCRAPER_API_KEY_2: ${{ secrets.SCRAPER_API_KEY_2 }}
+          SCRAPER_API_KEY_3: ${{ secrets.SCRAPER_API_KEY_3 }}
+          SCRAPER_API_KEY_4: ${{ secrets.SCRAPER_API_KEY_4 }}
+          SCRAPER_API_KEY_5: ${{ secrets.SCRAPER_API_KEY_5 }}
+          SCRAPER_API_KEY_6: ${{ secrets.SCRAPER_API_KEY_6 }}
+          SCRAPER_API_KEY_7: ${{ secrets.SCRAPER_API_KEY_7 }}
+          SCRAPER_API_KEY_8: ${{ secrets.SCRAPER_API_KEY_8 }}
+          SCRAPER_API_KEY_9: ${{ secrets.SCRAPER_API_KEY_9 }}
+          SCRAPER_API_KEY_10: ${{ secrets.SCRAPER_API_KEY_10 }}
         run: python UnifiedPriceScraper.py
 
       - name: Upload debug screenshots
