--- a/requirements_new_scraper.txt
+++ b/requirements_new_scraper.txt
@@ -5,7 +5,7 @@ nest-asyncio>=1.6.0
 
 # Browser automation
 playwright>=1.44.0
-playwright-stealth>=1.0.6
+# playwright-stealth  <-- REMOVED (using custom implementation)
 
 # Data processing
 pandas>=2.2.0
